--- a/css/splash-navbar.css
+++ b/css/splash-navbar.css
@@ -1,7 +1,8 @@
 .desktopNavContainer {
-	position: fixed;
+	position: sticky;
+	top: 0;
 	width: 100%;
-	height: 1px;
+	height: 0;
 	max-width: 1500px;
 	margin: auto;
 	z-index: 5;
@@ -9,55 +10,34 @@
 
 /*DESTOP NAVIGATION PANE*/
 #desktopNav {
-	z-index: 5;
 	position: relative;
-	top: 0;
-	left: 0;
-	width: 22%;
-	margin-left: 3%;
-	padding: 0px;
+	top: -10px;
+	left: 30px;
+	width: 350px;
+	box-shadow: 0px 0px 10px 0px;
+	border-radius: 3px;
 }
 .spinner {
 	overflow: hidden;
 }
 .sunburst {
-	z-index: 1;
 	position: relative;
 	max-width: 100%;
 	transform: rotate(0deg);
 	border-radius: 50%;
 }
-#notSubhaul {
-	background-color: #000;
-	position: relative;
-}
-.navbar {
-	margin: 0;
-	background-color: #000;
-	z-index: 9;
-	font-size: 14px;
-	border: 0;
-	letter-spacing: 2px;
-	padding: 10px;
-	min-height: 0px;
-	height: auto;
-	overflow: hidden;
-}
-.navbar li a, .navbar li a:focus {
+.navbar a {
+	display: block;
 	font-style: normal;
 	color: #ffffff;
-	background-color: #000000;
 	text-align: center;
 	margin: 0;
 	font-weight: 700;
-	padding: 10px 0px;
+	padding: 12px 0px;
 }
 .navbar li a:hover, .navbar li a:active, .navbar li.active a {
 	color: #000000;
 	background-color: #ffffff;
-}
-.nav li:last-child a {
-	color: #e4742e;
 }
 
 /*SUBHAUL*/
@@ -89,11 +69,7 @@
 	height: 100%;
 	width: 100%;
 	color: #fff;
-	font-size: 24;
-}
-
-#desktopNav .glyphicon::before {
-	/*content: "\e236";*/
+	font-size: 24px;
 }
 
 
