--- a/css/splash-style.css
+++ b/css/splash-style.css
@@ -16,18 +16,11 @@ h2 {
 	margin-bottom: 30px;
 }
 h3 {
-	font-size: 16px;
+	font-size: 20px;
 	font-weight: 700;
 }
 h4 {
 	font-size: 16px;
-}
-h6 {
-	display: none;
-	text-align: left;
-	margin: 5px;
-	font-size: 10px;
-	color: #ff0000;
 }
 body {
 	line-height: 1.8;
@@ -62,78 +55,33 @@ h1, h2, h3, .firstLetter, .navbar li a {
 .bg-white {
 	background-color: #ffffff;
 }
-.bg-black {
-	background-color: #000000;
+span.b {
+	font: inherit;
 }
-.container-fluid {
-	padding: 40px 50px;
-}
-.firstLetter {
-	font-weight: 700;
-	font-style: italic;
-}
-h1 .firstLetter {
+h1 .b {
 	font-size: 75px;
 }
-h2 .firstLetter {
+h2 .b {
 	font-size: 32px;
 }
-.btn-outline-primary {
-	font-style: normal;
-	background-color: transparent;
-	color: #e4742e;
-	border: solid 1px #e4742e;
-	transition: all 0.5s;
+.btn-primary {
+	background-color: #e4742e;
+	border: none;
 }
-.btn-outline-primary:hover {
-	background-color: rgba(228,116,46,0.85);
-	color: #ffffff;
+.btn-primary:hover {
+	background-color: #ad5016;
 }
-.g-recaptcha {
-	width: 302px;
-	height: 78px;
-	margin: auto;
+.text-primary {
+	color: #e4742e !important;
 }
 
-/*MODAL*/
-.modal {
-	z-index: 10;
-	display: none; 
-	position: fixed; 
-	padding-top: 100px; 
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%; 
-	overflow: hidden; 
-	background-color: rgb(0,0,0);
-	background-color: rgba(0,0,0,0.8); 
+.list-social > li {
+	display: inline-block;
+	width: 40px;
+	padding: 5px;
 }
-.modal-content {
-	z-index: 10;
-	position: relative;
-	margin: auto;
-	display: block;
-	width: 80%;
-	max-width: 700px;
-	margin: auto;
-	animation-name: zoom;
-	animation-duration: 0.6s;
-}
-#close {
-	z-index: 9999;
-	color: #ffffff;
-	position: fixed;
-	top: 20px;
-	right: 20px;
-	font-size: 20px;
-	transition: 0.5s ease;
-}
-#close:hover, #close:focus {
-	color: #999;
-}
-.mySlides img {
-	width: 100%;
+.list-social a:hover {
+	opacity: 0.8;
 }
 
 /*ANIMATION*/
